--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^2.1.1",
     "elm-webpack-loader": "^5.0.0",
     "file-loader": "^3.0.1",
+    "netlify-lambda": "^1.4.7",
     "node-sass": "^4.11.0",
     "raw-loader": "^2.0.0",
     "sass-loader": "^7.1.0",
